
Trunk (unreleased)
==================

Changes
-------

- Refactored extrusion handling to allow easier and finer control of extrusion
  vector generation.
  * a cs_mesh_extrude_face_info_t structure allows simple settings for each
    boundary face, including number of layers, thickness, and expansion factor,
    and optionally a start and end thickness. Utility functions allow
    "per zone" settings.
  * a cs_mesh_extrude_vectors_t structure defining local extrusion vectors,
    which is built automatically based on the face settings but can be
    modified by the user.

- Added boundary layer insertion at selected faces, using a mesh deformation
  (CDO vertex-based), followed by boundary layer extrusion.

Architectural changes
---------------------

- Add "Melissa" type writers for coupling with in-situ statistics
  Melissa server.

Release 5.1.0 (October 10 2017)
===============================

Physical modelling
------------------

- Turbulence: add DDES tubulence model
  * Activated using k-w SST model (iturb = 60) with keyword IDDES = 1
  * Hybrid Numerical scheme CD/SOLU can be activated with ISCHCV = 3

- Atmospheric model: add an atmostpheric infra-red absorption feature.
  Based on L. Makke PhD work.

Numerics
--------

- Atmospheric model: added partial radiative transfer properties model.

- Make supersonic outlet boundary condition implicit (compressible module).

- Added fallback mechanism to allow less stable but faster Krylov solvers
  (such as BiCGstab) to switch temporarily to GMRES in case of
  convergence error.

- Switch from Jacobi to processor-local symmetric Gauss-Seidel as default
  linear solver type for non-symmetric systems.

- Simplify selection of local symmetric Gauss-Seidel linear solver variant.

- Make vectorial and tensorial slope tests invariant by rotation and
  identical for all components (previous version available for the
  velocity with isstpc = -1 in var_cal_opt structure).
